[gd_scene load_steps=17 format=3 uid="uid://pyfb77v0jnhj"]

[ext_resource type="Texture2D" uid="uid://ch7o08dicx38r" path="res://images/Puzzle1BG.jpg" id="1_meen0"]
[ext_resource type="Script" uid="uid://cq7unuldeuwk6" path="res://scene/puzzle1.gd" id="1_pfjpx"]
[ext_resource type="Texture2D" uid="uid://b5b2fw1tpr67b" path="res://images/PuzzleMatchFaces/CardBorder.png" id="2_0w0rs"]
[ext_resource type="Texture2D" uid="uid://bxmb73gtoyhcg" path="res://images/PuzzleMatchFaces/MickeyFace.png" id="3_e244p"]
[ext_resource type="Script" uid="uid://bvs428sxt6i68" path="res://scripts/card.gd" id="3_pfjpx"]
[ext_resource type="Texture2D" uid="uid://d2hv3l5s3ffpq" path="res://images/PuzzleMatchFaces/MinnieFace.png" id="4_dcpgt"]
[ext_resource type="Texture2D" uid="uid://dwgqk0gnhxxg7" path="res://images/PuzzleMatchFaces/GoofyFace.png" id="5_pfjpx"]
[ext_resource type="Texture2D" uid="uid://cp68s0obdwokt" path="res://images/PuzzleMatchFaces/donald.png" id="6_0w0rs"]
[ext_resource type="Texture2D" uid="uid://ofiu3lws3tys" path="res://images/PuzzleMatchFaces/DaisyFace.png" id="6_pkv1j"]
[ext_resource type="Texture2D" uid="uid://bwflady3abrpj" path="res://images/PuzzleMatchFaces/PlutoFace.png" id="7_ix2fw"]
[ext_resource type="FontFile" uid="uid://i81x7klh0q1j" path="res://fonts/Chewy/Chewy-Regular.ttf" id="9_e244p"]
[ext_resource type="PackedScene" uid="uid://c858pibqkb3dw" path="res://text_box.tscn" id="12_pkv1j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0w0rs"]
size = Vector2(162.5, 161.5)

[sub_resource type="Animation" id="Animation_pkv1j"]
resource_name = "MemoryGame"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Instructions1:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Instructions1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Instructions:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ix2fw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Instructions1:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Instructions1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Instructions:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aa1vg"]
_data = {
&"MemoryGame": SubResource("Animation_pkv1j"),
&"RESET": SubResource("Animation_ix2fw")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pfjpx")

[node name="Puzzle1bg" type="Sprite2D" parent="."]
modulate = Color(0.3180198, 0.31801978, 0.31801975, 1)
position = Vector2(640, 363.5)
scale = Vector2(1, 0.98625)
texture = ExtResource("1_meen0")

[node name="Mickey" type="Area2D" parent="."]
position = Vector2(-1, 1)
script = ExtResource("3_pfjpx")
card_type = "mickey"

[node name="Sprite2D" type="Sprite2D" parent="Mickey"]
position = Vector2(830, 430)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Mickey"]
modulate = Color(1, 1, 1, 0)
position = Vector2(830.99994, 428)
scale = Vector2(0.12882847, 0.1028736)
texture = ExtResource("3_e244p")

[node name="MickeyCollision" type="CollisionShape2D" parent="Mickey"]
position = Vector2(830, 430)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Mickey2" type="Area2D" parent="."]
position = Vector2(-313, 180)
script = ExtResource("3_pfjpx")
card_type = "mickey"

[node name="Sprite2D" type="Sprite2D" parent="Mickey2"]
position = Vector2(830, 430)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Mickey2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(830.99994, 428)
scale = Vector2(0.12882847, 0.1028736)
texture = ExtResource("3_e244p")

[node name="MickeyCollision" type="CollisionShape2D" parent="Mickey2"]
position = Vector2(830.75, 430.25)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Minnie" type="Area2D" parent="."]
script = ExtResource("3_pfjpx")
card_type = "minnie"

[node name="Sprite2D" type="Sprite2D" parent="Minnie"]
position = Vector2(830, 610)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Minnie"]
modulate = Color(1, 1, 1, 0)
position = Vector2(835, 610)
scale = Vector2(0.5089286, 0.5089286)
texture = ExtResource("4_dcpgt")

[node name="MinnieCollision" type="CollisionShape2D" parent="Minnie"]
position = Vector2(830, 610)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Minnie2" type="Area2D" parent="."]
position = Vector2(-650, -180)
script = ExtResource("3_pfjpx")
card_type = "minnie"

[node name="Sprite2D" type="Sprite2D" parent="Minnie2"]
position = Vector2(830, 610)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Minnie2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(835, 610)
scale = Vector2(0.5089286, 0.5089286)
texture = ExtResource("4_dcpgt")

[node name="MinnieCollision" type="CollisionShape2D" parent="Minnie2"]
position = Vector2(829, 610)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Goofy" type="Area2D" parent="."]
script = ExtResource("3_pfjpx")
card_type = "goofy"

[node name="Sprite2D" type="Sprite2D" parent="Goofy"]
position = Vector2(180, 610)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Goofy"]
modulate = Color(1, 1, 1, 0)
position = Vector2(180, 609.00006)
scale = Vector2(0.12732558, 0.1273256)
texture = ExtResource("5_pfjpx")

[node name="GoofyCollision" type="CollisionShape2D" parent="Goofy"]
position = Vector2(180, 610)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Goofy2" type="Area2D" parent="."]
position = Vector2(650, -361)
script = ExtResource("3_pfjpx")
card_type = "goofy"

[node name="Sprite2D" type="Sprite2D" parent="Goofy2"]
position = Vector2(180, 610)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Goofy2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(180, 609.00006)
scale = Vector2(0.12732558, 0.1273256)
texture = ExtResource("5_pfjpx")

[node name="GoofyCollision" type="CollisionShape2D" parent="Goofy2"]
position = Vector2(181, 610)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Donald" type="Area2D" parent="."]
position = Vector2(3, -181)
script = ExtResource("3_pfjpx")
card_type = "donald"

[node name="Sprite2D" type="Sprite2D" parent="Donald"]
position = Vector2(515, 610)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Donald"]
modulate = Color(1, 1, 1, 0)
position = Vector2(514.875, 609.8367)
scale = Vector2(0.25300598, 0.25300598)
texture = ExtResource("6_0w0rs")

[node name="DonaldCollision2" type="CollisionShape2D" parent="Donald"]
position = Vector2(515, 610)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Donald2" type="Area2D" parent="."]
position = Vector2(585, -365)
script = ExtResource("3_pfjpx")
card_type = "donald"

[node name="Sprite2D" type="Sprite2D" parent="Donald2"]
position = Vector2(515, 610)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Donald2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(514.875, 609.8367)
scale = Vector2(0.25300598, 0.25300598)
texture = ExtResource("6_0w0rs")

[node name="DonaldCollision" type="CollisionShape2D" parent="Donald2"]
position = Vector2(515, 611)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Daisy" type="Area2D" parent="."]
position = Vector2(1, -3)
script = ExtResource("3_pfjpx")
card_type = "daisy"

[node name="Sprite2D" type="Sprite2D" parent="Daisy"]
position = Vector2(1100, 430)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Daisy"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1099.0001, 429)
scale = Vector2(0.15376101, 0.15376103)
texture = ExtResource("6_pkv1j")

[node name="DaisyCollision" type="CollisionShape2D" parent="Daisy"]
position = Vector2(1100, 430)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Daisy2" type="Area2D" parent="."]
position = Vector2(-921, -183)
script = ExtResource("3_pfjpx")
card_type = "daisy"

[node name="Sprite2D" type="Sprite2D" parent="Daisy2"]
position = Vector2(1100, 430)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Daisy2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1099.0001, 429)
scale = Vector2(0.15376101, 0.15376103)
texture = ExtResource("6_pkv1j")

[node name="DaisyCollision" type="CollisionShape2D" parent="Daisy2"]
position = Vector2(1101, 430)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Pluto" type="Area2D" parent="."]
script = ExtResource("3_pfjpx")
card_type = "pluto"

[node name="Sprite2D" type="Sprite2D" parent="Pluto"]
position = Vector2(1100, 610)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Pluto"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1102, 610.00006)
scale = Vector2(0.13168582, 0.13168582)
texture = ExtResource("7_ix2fw")

[node name="PlutoCollision" type="CollisionShape2D" parent="Pluto"]
position = Vector2(1100, 610)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Pluto2" type="Area2D" parent="."]
position = Vector2(-583, -363)
script = ExtResource("3_pfjpx")
card_type = "pluto"

[node name="Sprite2D" type="Sprite2D" parent="Pluto2"]
position = Vector2(1100, 610)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0w0rs")

[node name="Sprite2D2" type="Sprite2D" parent="Pluto2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1102, 610.00006)
scale = Vector2(0.13168582, 0.13168582)
texture = ExtResource("7_ix2fw")

[node name="PlutoCollision" type="CollisionShape2D" parent="Pluto2"]
position = Vector2(1101, 610)
shape = SubResource("RectangleShape2D_0w0rs")

[node name="Game1" type="Label" parent="."]
visible = false
offset_left = -2.0
offset_right = 1282.0
offset_bottom = 131.0
theme_override_fonts/font = ExtResource("9_e244p")
theme_override_font_sizes/font_size = 50
text = "Minnie's Memory Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameCongradulations" type="Label" parent="."]
visible = false
offset_left = 40.999985
offset_top = 492.0
offset_right = 1322.0
offset_bottom = 628.0
rotation = -0.27925268
theme_override_colors/font_color = Color(0.97565645, 0, 0.22197235, 1)
theme_override_fonts/font = ExtResource("9_e244p")
theme_override_font_sizes/font_size = 50
text = "CONGRATULATIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
offset_left = 21.0
offset_top = 16.0
offset_right = 61.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "30"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_aa1vg")
}

[node name="TextBox" parent="AnimationPlayer" instance=ExtResource("12_pkv1j")]
offset_left = 383.0
offset_top = 41.0
offset_right = 941.8169
offset_bottom = 223.0

[node name="Instructions1" type="Label" parent="AnimationPlayer"]
offset_left = 409.0
offset_top = 92.0
offset_right = 925.0
offset_bottom = 224.0
theme_override_fonts/font = ExtResource("9_e244p")
theme_override_font_sizes/font_size = 32
text = "Click boxes to flip them, keep flipping till all the boxes are matched (2 at a time)."
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="Instructions" type="Label" parent="AnimationPlayer"]
offset_left = 388.0
offset_top = 48.0
offset_right = 600.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 22
text = "Instructions"
horizontal_alignment = 1
